clusters/arcanis/nickatcher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: nickatcher
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        ports:
        - containerPort: 4568
          name: slskd
        volumeMounts:
        - name: gluetun
          mountPath: /gluetun
      - name: slskd
        image: slskd/slskd:latest
        securityContext:
          runAsUser: 1000
          runAsGroup: 100
        volumeMounts:
        - name: slskd
          mountPath: /app
      volumes:
      - name: gluetun
        hostPath:
          path: /storage/appdata/nickatcher/gluetun
          type: DirectoryOrCreate
      - name: slskd
        hostPath:
          path: /storage/appdata/nickatcher/slskd
          type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: nickatcher
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        hostPath:
          path: /storage/appdata/nickatcher/pgdata
          type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nickatcher
  namespace: nickatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nickatcher
  template:
    metadata:
      labels:
        app: nickatcher
    spec:
      containers:
      - name: nickatcher
        image: ghcr.io/samhatter/nickatcher:latest
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: model-data
          mountPath: /data
      volumes:
      - name: logs
        hostPath:
          path: /storage/appdata/nickatcher/logs
          type: DirectoryOrCreate
      - name: model-data
        hostPath:
          path: /storage/appdata/nickatcher/model_data
          type: DirectoryOrCreate
