clusters/arcanis/nickatcher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: nickatcher
spec:
  selector:
    app: slskd
  ports:
  - name: slskd
    port: 4568
    targetPort: 4568
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: nickatcher
spec:
  selector:
    app: db
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
